[package]
name = "glow-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
const_format = "0.2.32"
glfw = { version = "0.55.0", default-features = false }
glow = "0.13.1"
