[package]
name = "glutin-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
winit = { version = "0.29.15", features = ["rwh_05"] }
