[package]
name = "piston-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.44"
piston2d-wgpu_graphics = "0.9.0"
piston_window = "0.132.0"
pistoncore-glutin_window = "0.72.0"
pistoncore-winit_window = { version = "0.17.0", features = ["vulkano-win"] }
pollster = { version = "0.4.0", features = ["macro"] }
wgpu = "0.17.2"
