[package]
name = "sdl2-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
gfx = []
opengl = []

[dependencies]
gl = "0.14.0"
sdl2 = { version = "0.36.0", features = ["gfx", "image", "mixer"] }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.03.25"
dependencies = ["sdl2", "sdl2-gfx", "sdl2-image", "sdl2-mixer"]
