[package]
name = "wgpu-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.19.3"
winit = "0.29.15"
